<resources>
    <string name="app_name">Agrify Seller</string>
    <string name="store">Store</string>
    <string name="wiselist">wiselist</string>
    <string name="notification">Notification</string>
    <string name="about">Profile</string>
    <string name="username">user name</string>

    <string name="title_activity_edit_profile">editProfile</string>
    <string name="title_activity_intro_slider">introSlider</string>
    <string name="email_hint">Email</string>
    <string name="phone_hint">Phone Number</string>

    <string name="changeProfile">Change Profile</string>
    <string name="shr_filter_title">Filter</string>
    <string name="shr_search_title">Search</string>
    <string name="editProfileBtn">edit profile</string>


    <string name="profile_menu_save">save</string>
    <string name="forgot_password">Forgot password?</string>


    <!-- Shrine backdrop menu labels -->
    <string name="password_error">password must be of 6 char or greater and no  space is allowed</string>
    <string name="username_empty">user name cannot empty</string>


    //authentication
    <string name="phone_error">phone no is invalid</string>


    //validation auth
    <string name="password_match_error">both password must match</string>
    <string name="email_verification">You will receive an email with instructions of verification of email.</string>
    <string name="store_product_transition">store_product_transition</string>
    <string name="no_products_found">no product found</string>
    <string name="rating_bar_title">Rating</string>


    //transaction names
    <string name="productimageslider">ProductImageSlider</string>
    <string name="productname">ProductName</string>
    <string name="seller_location">Location</string>
    <string name="buy_now">Buy Now</string>
    <string name="products">products</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_address">ADD NEW ADDRESS</string>
    <string name="place_name">Place Name</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="place_address">Place Address</string>
    <string name="save_address">Save Address</string>
    <string name="chat">Chat</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="opening">opening</string>

    <!--onBording-->
    <string name="slide_1_title">Products</string>
    <string name="slide_1_desc">Get various crop on our app !</string>
    <string name="slide_2_title">Compare Rates</string>
    <string name="slide_2_desc">Easily Compare rates of your product !</string>
    <string name="slide_3_title">Hassle Free Payments</string>
    <string name="slide_3_desc">You can easily pay in a minute !</string>
    <string name="empty">this field cannot be empty</string>
    <string-array name="orderStatus_spinner">
        <item>pending</item>
        <item>conform</item>
        <item>Completed</item>
        <item>Refunded</item>
    </string-array>
    <string-array name="categories_spinner">
        <item>select category</item>
        <item>fruits</item>
        <item>vegetables</item>
        <item>seeds</item>
        <item>grains</item>
        <item>pulses</item>
        <item>dairy products</item>
    </string-array>
    <string-array name="categories_names">

        <item>all</item>
        <item>fruits</item>
        <item>vegetables</item>
        <item>seeds</item>
        <item>grains</item>
        <item>pulses</item>

        <item>dairy products</item>

    </string-array>
</resources>

