<?xml version="1.0" encoding="utf-8"?>
<layout>


    <data>
        <variable
            name="address"
            type="com.example.agrifysellers.activity.address.model.Address" />
    </data>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activity.address.address">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/address_button"
            style="@style/AppTheme.primaryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginBottom="@dimen/dp_12"
            android:text="@string/add_address" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
           android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="15dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_12"
                    android:hint="@string/place_name"
                    app:hintEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/Placename"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:text="@{address.placeName}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/place_address"
                    app:hintEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/PlaceAdress"
                        android:layout_width="match_parent"
                        android:layout_height="140dp"
                        android:inputType="text|textMultiLine"
                        android:text="@{address.placeAddress}" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_address"
            style="@style/AppTheme.primaryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginBottom="@dimen/dp_12"
            android:text="@string/save_address" />
    </LinearLayout>
</layout>